Fix spacing styling for app component

--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -1,5 +1,6 @@
 .appLayout {
 
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
