--- a/src/styles/app/Shop.module.css
+++ b/src/styles/app/Shop.module.css
@@ -1,6 +1,6 @@
 .shopContainer {
 
-    min-height: calc(100vh - 5.5rem);
+    flex: 1;
     padding: 4rem 6rem;
 
     display: flex;
